# explore-implicit-sgd

./: README.md  pyproject.toml
src/: args.py  arguments.py  data.py  dataloader.py  exp_setup.py  lib.py  net.py  test_gradvar.py  test_optimize.py  test_quadratic.py  test_toy_colored_mnist.py  trainer.py
