[tool.poetry]
name = "explore-implicit-sgd"
version = "0.1.0"
description = ""
authors = ["maxwshen <maxwshen@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
torch = "^1.8.1"
pandas = "^1.2.4"
numpy = "^1.20.3"
seaborn = "^0.11.1"
pytorch-lightning = "^1.3.1"
torchvision = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
